syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.storagemanager";
option java_outer_classname = "StorageManagerProto";


package storage_manager;

service StorageManage {
  rpc Merge (MergeRequest) returns (StorageManageReply) {}
  rpc Delete (DeleteRequest) returns (StorageManageReply) {}
}

message MergeRequest {
  string file_key = 1;
  string total_chunk_count = 2;
}

message DeleteRequest {
  string file_key = 1;
}

message StorageManageReply {
  string message = 1;
}
